--- a/algobattle_web/templates/admin_users.jinja
+++ b/algobattle_web/templates/admin_users.jinja
@@ -14,7 +14,7 @@
     </div>
     <div v-else>
       <span>${user.name} </span>
-      <i v-if="user.is_admin" class="bi bi-patch-check-fill text-success" data-bs-toggle="tooltip" data-bs-placement="right" title="Admin"></i>
+      <i v-if="user.is_admin" class="bi bi-patch-check-fill text-success" @vue:mounted="new bootstrap.Tooltip($el)" data-bs-toggle="tooltip" data-bs-placement="right" title="Admin"></i>
     </div>
   </td>
   <td>
