--- a/algobattle_web/templates/base.jinja
+++ b/algobattle_web/templates/base.jinja
@@ -68,9 +68,8 @@
     </div>
     <script>
       addEventListener("DOMContentLoaded", (event) => {
-        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-          return new bootstrap.Tooltip(tooltipTriggerEl)
+        new bootstrap.Tooltip(document.body, {
+          selector: '[data-bs-toggle="tooltip"]'
         })
       })
     </script>
