--- a/algobattle_web/templates/user.jinja
+++ b/algobattle_web/templates/user.jinja
@@ -4,7 +4,7 @@
 <div class="col-8">
   {% if error %}
   <div class="alert alert-danger" role="alert">
-    The email {{error.email}} is already used by another user!
+    The email {{error.name}} is already used by another user!
     <button type="button" class="btn-close float-end" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
   {% endif %}
