disable buggy tooltips

--- a/algobattle_web/templates/base.jinja
+++ b/algobattle_web/templates/base.jinja
@@ -72,11 +72,11 @@
       </div>
     </div>
     <script>
-      addEventListener("DOMContentLoaded", (event) => {
+      /*addEventListener("DOMContentLoaded", (event) => {
         new bootstrap.Tooltip(document.body, {
           selector: '[data-bs-toggle="tooltip"]'
         })
-      })
+      })*/
     </script>
   </body>
 </html>
