--- a/algobattle_web/templates/base.jinja
+++ b/algobattle_web/templates/base.jinja
@@ -11,7 +11,7 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
-    <div class="container-fluid">
+    <div class="container-xxl">
       <div class="row flex-nowrap">
         <div class="d-flex flex-column col-2 py-3 px-0 px-sm-3 text-bg-dark overflow-hidden text-white min-vh-100">
             <a href="/" class="d-flex align-items-center mb-md-0 me-md-auto text-white text-decoration-none">
@@ -63,11 +63,9 @@
             </div>
             {% endif %}
         </div>
-        <div class="col-10 py-3">
-            <div class="row justify-content-center mt-5"> 
-              {% block content %}
-              {% endblock %}
-            </div>
+        <div class="col-10 p-5">
+          {% block content %}
+          {% endblock %}
         </div>
       </div>
     </div>
