--- a/algobattle_web/static/scripts/styles.css
+++ b/algobattle_web/static/scripts/styles.css
@@ -1,3 +1,13 @@
+.w-sm {
+    max-width: 150px;
+}
 .w-md {
     max-width: 300px;
 }
+.w-lg {
+    max-width: 600px;
+}
+.w-xl {
+    max-width: 1200px;
+}
+
