--- a/algobattle_web/static/scripts/styles.css
+++ b/algobattle_web/static/scripts/styles.css
@@ -1,13 +1,22 @@
-.w-sm {
+.w-es {
     max-width: 150px;
 }
-.w-md {
+.w-em {
     max-width: 300px;
 }
+.w-xs {
+    max-width: 576px;
+}
+.w-sm {
+    max-width: 768px;
+}
+.w-md {
+    max-width: 992px;
+}
 .w-lg {
-    max-width: 600px;
+    max-width: 1200px;
 }
 .w-xl {
-    max-width: 1200px;
+    max-width: 1400px;
 }
 
