--- a/algobattle_web/templates/base.jinja
+++ b/algobattle_web/templates/base.jinja
@@ -19,8 +19,9 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <div class="container-xxl">
-      <div class="row flex-nowrap">
-        <div class="d-flex flex-column col-2 py-3 px-0 px-sm-3 text-bg-dark overflow-hidden text-white min-vh-100">
+      <div class="row">
+        <div class="col-2 px-0">
+          <div class="position-fixed vh-100 d-flex flex-column py-3 px-sm-3 text-bg-dark flex-fill flex-grow-1">
             <a href="/" class="d-flex align-items-center mb-md-0 me-md-auto text-white text-decoration-none">
               <span class="fs-4 d-none d-sm-inline">Algobattle</span>
             </a>
@@ -69,6 +70,8 @@
               </ul>
             </div>
             {% endif %}
+          </div>
+          <div class="flex-fill"></div>
         </div>
         <div class="col-10 p-5">
           {% block content %}
