swap teams page to vue

--- a/algobattle_web/templates/admin_teams.jinja
+++ b/algobattle_web/templates/admin_teams.jinja
@@ -2,108 +2,112 @@
 {% block content %}
 
 <script src="/static/scripts/admin_teams.js" type="module"></script>
-
-<template id="table_row">
-  <td>
-    <input v-if="editing" class="form-control form-control-sm" name="name" type="text" :placeholder="team.name">
-    <span v-else>${team.name}</span>
-  </td>
-  <td>
-    <select v-if="editing" class="form-select form-select-sm" name="context">
-      <option v-for="ctx in {{contexts}}" :value="ctx.name" :selected="ctx.name == team.context.name">${ctx.name}</option>
-    </select>
-    <span v-else>${team.context.name}</span>
-  </td>
-  <td><span>${team.members?.join(", ")}</span></td>
-  <td class="text-end">
-    <div class="btn-group btn-group-sm" role="group">
-      <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete team" v-if="editing" @click="delete_team"><i class="bi bi-trash"></i></button>
-      <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit team" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
-      <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
-    </div>
-  </td>
-</template>
+<script>
+  var teams_input = {{teams | tojson}}
+  var contexts_input = {{contexts | tojson}}
+</script>
 
 
-<h3>Teams</h3>
-<form id="team-table" v-scope @submit.prevent="edit_team" class="mb-5">
-  <table class="table" id="teams">
-    <thead>
-      <tr>
-        <th scope="col">Name</th>
-        <th scope="col">Context</th>
-        <th scope="col">Members</th>
-        <th scope="col"></th>
-      </tr>
-    </thead>
-    <tbody>
-    {% for team in teams %}
-      <tr v-scope='TableRow({{team | tojson}})'></tr>
-    {% endfor %}
-    </tbody>
-  </table>
-</form>
-
-<h3>Create new team</h3>
-<form id="create-team" method="post" action="teams/create" class="mb-5">
-  <div class="row g-2">
-    <div class="col-md w-em">
-      <label for="name" class="form-label">Name</label>
-      <input class="form-control form-control-sm" name="name" type="text" required="required">
-    </div>
-    <div class="col-md w-em">
-      <label for="context-select" class="form-label">Context</label>
-      <select class="form-select form-select-sm" id="context-select" name="context">
-        {% for context in contexts %}
-          <option value="{{context.name}}">{{context.name}}</option>
-        {% endfor %}
+<script type="text/x-template" id="team_row">
+  <tr>
+    <td>
+      <input v-if="editing" class="form-control form-control-sm" name="name" type="text" :placeholder="team.name">
+      <span v-else>${team.name}</span>
+    </td>
+    <td>
+      <select v-if="editing" class="form-select form-select-sm" name="context">
+        <option v-for="ctx in $parent.contexts" :value="ctx.name" :selected="ctx.name == team.context.name">${ctx.name}</option>
       </select>
-    </div>
-  </div>
-  <button type="submit" class="btn btn-primary mt-3">Create</button>
-</form>
+      <span v-else>${team.context.name}</span>
+    </td>
+    <td><span>${team.members?.join(", ")}</span></td>
+    <td class="text-end">
+      <div class="btn-group btn-group-sm" role="group">
+        <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete team" v-if="editing" @click="delete_team"><i class="bi bi-trash"></i></button>
+        <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit team" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
+        <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
+      </div>
+    </td>
+  </tr>
+</script>
+
+<script type="text/x-template" id="context_row">
+  <tr>
+    <td>
+      <input v-if="editing" class="form-control form-control-sm" name="name" type="text" :placeholder="context.name">
+      <span v-else>${context.name}</span>
+    </td>
+    <td class="text-end">
+      <div class="btn-group btn-group-sm" role="group">
+        <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete team" v-if="editing" @click="delete_context"><i class="bi bi-trash"></i></button>
+        <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit team" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
+        <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
+      </div>
+    </td>
+  </tr>
+</script>
 
 
-<template id="context_row">
-  <td>
-    <input v-if="editing" class="form-control form-control-sm" name="name" type="text" :placeholder="context.name">
-    <span v-else>${context.name}</span>
-  </td>
-  <td class="text-end">
-    <div class="btn-group btn-group-sm" role="group">
-      <button type="button" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete team" v-if="editing" @click="delete_context"><i class="bi bi-trash"></i></button>
-      <button type="button" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit team" @click="toggle_editing"><i class="bi bi-pencil"></i></button>
-      <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="Submit edit" v-if="editing"><i class="bi bi-check2"></i></button>
-    </div>
-  </td>
-</template>
-
-<div class="row gy-5">
-  <div class="col-md w-em">
-    <h3>Contexts</h3>
-    <form id="team-table" v-scope @submit.prevent="edit_context">
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Name</th>
-            <th scope="col"></th>
-          </tr>
-        </thead>
-        <tbody>
-        {% for context in contexts %}
-          <tr v-scope='ContextRow({{context | tojson}})'></tr>
-        {% endfor %}
-        </tbody>
-      </table>
+<div id="app">
+  <h3>Teams</h3>
+  <form id="team-table" @submit.prevent="edit_team" class="mb-5">
+    <table class="table" id="teams">
+      <thead>
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Context</th>
+          <th scope="col">Members</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr is="vue:team-row" v-for="team in teams" :team="team" :key="team.id" @delteam="del_team_event"></tr>
+      </tbody>
+    </table>
   </form>
-  </div>
-  <div class="col-md">
-    <h3>Create new context</h3>
-    <form id="create-context" method="post" action="teams/create_context">
-      <label for="name" class="form-label">Name</label>
-      <input class="form-control form-control-sm w-em mb-3" name="name" type="text" required="required">
-      <button type="submit" class="btn btn-primary">Create</button>
+
+  <h3>Create new team</h3>
+  <form id="create-team" @submit.prevent="create_team" class="mb-5">
+    <div class="row g-2">
+      <div class="col-md w-em">
+        <label for="name" class="form-label">Name</label>
+        <input class="form-control form-control-sm" name="name" type="text" required="required">
+      </div>
+      <div class="col-md w-em">
+        <label for="context-select" class="form-label">Context</label>
+        <select class="form-select form-select-sm" id="context-select" name="context">
+          <option v-for="context in contexts" :value="context.name">${context.name}</option>
+        </select>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary mt-3">Create</button>
   </form>
+
+  <div class="row gy-5">
+    <div class="col-md w-em">
+      <h3>Contexts</h3>
+      <form id="team-table" @submit.prevent="edit_context">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr is="vue:context-row" v-for="context in contexts" :context="context" @delcontext="del_context_event"></tr>
+          </tbody>
+        </table>
+    </form>
+    </div>
+    <div class="col-md">
+      <h3>Create new context</h3>
+      <form id="create-context" @submit.prevent="create_context">
+        <label for="name" class="form-label">Name</label>
+        <input class="form-control form-control-sm w-em mb-3" name="name" type="text" required="required">
+        <button type="submit" class="btn btn-primary">Create</button>
+    </form>
+    </div>
   </div>
 </div>
 
