fix html attribute

--- a/algobattle_web/templates/admin_teams.jinja
+++ b/algobattle_web/templates/admin_teams.jinja
@@ -89,7 +89,7 @@
     <div class="row g-2">
       <div class="col-md w-em">
         <label for="team" class="form-label">Team</label>
-        <select class="form-select form-select-sm" name="team" type="text" required="required">
+        <select class="form-select form-select-sm" name="team" required="required">
           <option v-for="team in teams" :value="team.id">${team.name}</option>
         </select>
       </div>
